# AI-Lie-Detector

./: .gitignore  README.md  create_emotion_dataset.py  dataset_with_emotions.csv  pyproject.toml  requirements.txt
app/: main.py
app/core/: logger.py
app/ml/: bert_training.py  model_training.py  nlp_utils.py
frontend/: app.js  dashboard.html  dashboard.js  index.html  style.css
scripts/: fetch_dataset.py  generate_conversations.py
tests/: test_main.py
