[project]
name = "ai-lie-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=1.1.0",
    "uvicorn>=0.44.0",
]
